--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "one",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skindervik.github.io/Book/",
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@testing-library/jest-dom": "^5.11.10",
